--- a/Pages/ECStaff/Index.cshtml
+++ b/Pages/ECStaff/Index.cshtml
@@ -18,7 +18,7 @@
 	<!-- Title-->
 	<div class="row p-2">
 		<div class="col d-flex align-items-center">
-			<h1>EC Staff</h1>
+			<h1><i class="bi bi-person-standing"></i>EC Staff</h1>
 		</div>
 	</div>
 
