--- a/Pages/Inventory/Index.cshtml
+++ b/Pages/Inventory/Index.cshtml
@@ -15,11 +15,10 @@
         </nav>
     </div>
 
-
     <!-- Title and Add Button-->
     <div class="row p-2">
         <div class="col d-flex align-items-center">
-            <h1>Inventory</h1>
+            <h1><i class="bi bi-box"></i>Inventory</h1>
         </div>
 
         <div class="col-auto d-flex justify-content-between align-items-center">
@@ -62,7 +61,7 @@
                         </td>
                         <td>
                             <div class="d-flex align-items-center" style="gap: 5px">
-                                <button class="btn btn-primary btn-small me-2">Receive</button>
+                                <p><button class="btn btn-primary btn-small me-2">Receive</button></p>
                                 <div class="d-inline position-relative">
                                     <a href="#" role="button" id="recordOptions" data-bs-toggle="dropdown" aria-expanded="false">
                                         <i class="bi bi-three-dots-vertical"></i>
