--- a/Pages/UserManagement/Index.cshtml
+++ b/Pages/UserManagement/Index.cshtml
@@ -57,7 +57,7 @@
     <!-- Title and Add Button-->
     <div class="row p-2">
         <div class="col d-flex align-items-center">
-            <h1>Disaster</h1>
+            <h1><i class="bi bi-person-lines-fill"></i>User Management</h1>
         </div>
 
         <div class="col-auto d-flex justify-content-between align-items-center">
