--- a/Pages/Disaster/Profile/reliefgoodspack/Add.cshtml
+++ b/Pages/Disaster/Profile/reliefgoodspack/Add.cshtml
@@ -158,9 +158,9 @@
         var table = $('#inclusion-table').DataTable({
             responsive: true,
             columnDefs: [
-                { "orderable": true, "targets": [0, 1, 2, 3] }, // Sortable columns
-                { "orderable": false, "targets": [4] }, // Non-sortable columns
-                { "responsivePriority": -1, "targets": [0, 4] } // Disable responsive for # and qty per pack column
+                { "orderable": true, "targets": [1, 2, 3, 4] }, // Sortable columns
+                { "orderable": false, "targets": [0, 5] }, // Non-sortable columns
+                { "responsivePriority": -1, "targets": [0, 5] } // Disable responsive for checkbox and qty per pack column
             ],
             language: {
                 emptyTable: "There are no relief pack inclusions available for this evacuation center.",
