--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -68,11 +68,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-page="/usermanagement/index">Users</a>
                         </li>
-                        <li class="nav-item">
+                        @*<li class="nav-item">
                             <a href="#" class="profile">
                                 <img src="~/sample-pic.jpg" alt="User Profile">
                             </a>
-                        </li>
+                        </li>*@
                     </ul>
                 </div>
             </div>
