--- a/Pages/UserManagement/Index.cshtml
+++ b/Pages/UserManagement/Index.cshtml
@@ -75,10 +75,10 @@
         <div class="col-lg-12">
             <table id="user-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
                 <thead>
-                    <tr style="vertical-align: top;">
+                    <tr style="vertical-align: central;">
                         <th>#</th>
                         <th>Username</th>
-                        <th>User Type</th>
+                        <th>User Type<br /></th>
                         <th>Created At</th>
                         <th></th>
                     </tr>
