--- a/Pages/disaster/profile/entrylog/Index.cshtml
+++ b/Pages/disaster/profile/entrylog/Index.cshtml
@@ -178,7 +178,7 @@
 													<li>
 														<a href="#" class="dropdown-item text-danger" onclick="prepareDelete('@item.entryLogID')"
 														   data-deleteid="@item.entryLogID" data-bs-toggle="modal" data-bs-target="#deleteConfirmationModal">
-															Delete Entry Log
+															Delete
 														</a>
 													</li>
 												</ul>
