--- a/Pages/disaster/profile/inventory/Index.cshtml
+++ b/Pages/disaster/profile/inventory/Index.cshtml
@@ -186,7 +186,7 @@
 				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
-				<p>Are you sure you want to delete this item?</p>
+				<p>Are you sure you want to delete this item from @Model.logInfo.centerName's inventory?</p>
 				<p><strong class="text-danger">This cannot be undone.</strong></p>
 			</div>
 			<div class="modal-footer">
