--- a/Pages/disaster/profile/staffassignment/Index.cshtml
+++ b/Pages/disaster/profile/staffassignment/Index.cshtml
@@ -171,7 +171,7 @@
 													<i class="bi bi-three-dots-vertical"></i>
 												</a>
 												<ul class="dropdown-menu" aria-labelledby="recordOptions">
-													<li><a class="dropdown-item" href="/ecstaff/index">View Staff Profile</a></li>
+													<li><a class="dropdown-item" href="/ecstaff/index">View Profile</a></li>
 													<li>
 														<a href="#" class="dropdown-item text-danger" onclick="prepareDelete('@item.assignmentID')"
 														   data-deleteid="@item.assignmentID" data-bs-toggle="modal" data-bs-target="#deleteConfirmationModal">
