--- a/Pages/disaster/profile/entrylog/Index.cshtml
+++ b/Pages/disaster/profile/entrylog/Index.cshtml
@@ -135,10 +135,9 @@
 											<label class="form-check-label"></label>
 										</div>
 									</th>
+									<th>Family Serial No.</th>
 									<th>Name</th>
 									<th style="text-align: center;">Remarks</th>
-									<th style="text-align: center;">Check-in Date</th>
-									<th style="text-align: center;">Check-out Date</th>
 									<th style="text-align: center;">Status</th>
 									<th></th>
 								</tr>
@@ -154,10 +153,9 @@
 												<label class="form-check-label"></label>
 											</div>
 										</td>
-										<td width="30%">@item.fullName</td>
-										<td width="15%">@item.remarks</td>
-										<td width="20%" style="text-align: center;">@item.checkInDate</td>
-										<td width="20%" style="text-align: center;">@item.checkOutDate</td>
+										<td width="20%" style="text-align: center;">@item.serialNum	</td>
+										<td width="40%">@item.fullName</td>
+										<td width="20%">@item.remarks</td>
 										<td width="15%" style="text-align: center;">
 											@if (@item.entryStatus == "Check-in")
 											{
@@ -178,6 +176,12 @@
 														<a class="dropdown-item" href="/family/index">View Profile</a>
 													</li>
 													<li>
+														<a href="#" class="dropdown-item" onclick="showDatesPopup('@item.checkInDate', '@item.checkOutDate')"
+														   data-bs-toggle="modal" data-bs-target="#datesModal">
+														   View Entry Details
+														</a>
+													</li>
+													<li>
 														<a href="#" class="dropdown-item text-danger" onclick="prepareDelete('@item.entryLogID')"
 														   data-deleteid="@item.entryLogID" data-bs-toggle="modal" data-bs-target="#deleteConfirmationModal">
 															Delete
@@ -196,6 +200,34 @@
 		</div>
 	</div>
 </div>
+
+<!-- Modal: View Entry Details -->
+<div class="modal fade" id="datesModal" tabindex="-1">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title">Entry Details</h5>
+				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			</div>
+			<div class="modal-body">
+				<p id="checkInDate"></p>
+				<p id="checkOutDate"></p>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+<!-- Entry Details Modal -->
+<script>
+	function showDatesPopup(checkInDate, checkOutDate) {
+		// Set the content of the modal with the provided dates
+		document.getElementById('checkInDate').innerText = 'Check-in Date: ' + checkInDate;
+		document.getElementById('checkOutDate').innerText = 'Check-out Date: ' + checkOutDate;
+	}
+</script>
 
 <!-- Modal: Confirm Check-out -->
 <div class="modal" id="confirmSaveModal" tabindex="-1">
@@ -269,15 +301,15 @@
 		var table = $('#entrylog-table').DataTable({
 			responsive: true,
 			columnDefs: [
-				{ "orderable": true, "targets": [1, 3, 4] }, // Sortable columns
-				{ "orderable": false, "targets": [0, 2, 5, 6] } // Non-sortable columns
+				{ "orderable": true, "targets": [1, 2] }, // Sortable columns
+				{ "orderable": false, "targets": [0, 3, 4, 5] } // Non-sortable columns
 			],
 			// Set initial sorting by the Check-in Date
 			order: [[3, 'asc']]
 		});
 
 		// Adding filters to specific columns
-		table.columns([2, 5]).every(function () {
+		table.columns([1, 3, 4]).every(function () {
 			var column = this;
 			var select = $('<select><option value=""></option></select>')
 				.appendTo($(column.header()))
@@ -293,7 +325,7 @@
 
 			column.data().unique().sort().each(function (d, j) {
 				// Only add the options "Check-in" and "Check-out" for the "Status" column
-				if (column.index() === 5) {
+				if (column.index() === 4) {
 					// Set specific filter options only if they haven't been added
 					if (select.find("option[value='Check-in']").length == 0) {
 						select.append('<option value="Check-in">Check-in</option>');
