--- a/Pages/UserManagement/Admin/Add.cshtml
+++ b/Pages/UserManagement/Admin/Add.cshtml
@@ -16,6 +16,7 @@
 	<div class="col-lg-6 mx-auto">
 		<form method="POST">
             <h1 class="display-5 fw-bold">Add New User</h1>
+            <p>Admin</p>
 
             <br />
 
