--- a/Pages/UserManagement/Admin/Edit.cshtml
+++ b/Pages/UserManagement/Admin/Edit.cshtml
@@ -12,46 +12,43 @@
     </div>
 }
 
-<div class="container p-2 form-container">
-    <div class="container mt-4 form-container-content">
-        <div class="row">
-            <div class="col text-center">
-                <h1>Edit User</h1>
-                <h6 class="text-dark">Admin</h6>
-            </div>
-        </div>
+<div class="bg-light rounded px-2 py-0 my-3 text-center">
+    <div class="col-lg-6 mx-auto">
         <form method="POST" id="editUserForm">
-            <div class="row mb-3 user-container">
-                <input type="hidden" name="userID" value="@Model.userID" />
+            <h1 class="display-5 fw-bold">Edit New User</h1>
+            <p>Admin</p>
 
-                <div class="row mb-3">
-                    <p class="text-danger text-end">* Required field</p>
-                </div>
+            <br />
 
-                <!-- User ID -->
-                <div class="row mb-3 pb-1">
-                    <label class="form-label">User ID: @Model.userID</label>
-                </div>
+            <input type="hidden" name="userID" value="@Model.userID" /> 
 
-                <!-- Admin Name -->
-                <div class="mb-3">
-                    <label class="form-label">Admin Name:<span class="text-danger" style="padding:5px">*</span></label>
+            <!-- User ID -->
+            <div class="row">
+                <label class="col-sm-4 col-form-label text-start">User ID: @Model.userID</label>
+            </div>
+
+            <!-- Admin Name -->
+            <div class="row">
+                <label class="col-sm-4 col-form-label text-start" for="adminName">Admin Name:<span class="text-danger" style="padding:5px">*</span></label>
+                <div class="col-sm-8">
                     <input type="text" id="adminName" name="adminName" class="form-control" value="@Model.adminName" required maxlength="65" />
                 </div>
+            </div>
 
-                @if (!string.IsNullOrEmpty(Model.successMessage))
-                {
-                    <div class="alert alert-success alert-dismissible fade show" role="alert">
-                        <strong>@Model.successMessage</strong>
-                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                    </div>
-                }
+            <br />
 
-                <!-- Cancel and Save Button -->
-                <div class="button-spacer">
-                    <a class="btn btn-outline-secondary mr-10" href="/usermanagement/index" role="button">Cancel</a>
-                    <button type="button" id="submitBtn" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#editConfirmationModal">Save</button>
+            @if (!string.IsNullOrEmpty(Model.successMessage))
+            {
+                <div class="alert alert-success alert-dismissible fade show" role="alert">
+                    <strong>@Model.successMessage</strong>
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
+            }
+
+            <!-- Cancel and Save Button -->
+            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+                <button type="button" id="submitBtn" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#editConfirmationModal">Save</button>
+                <a href="/usermanagement/index" type="button" class="btn btn-outline-secondary px-4 gap-3">Cancel</a>
             </div>
         </form>
     </div>
